// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renderers:Action [actionType = "link"] show active class 1`] = `
<button
  className="cxd-Button cxd-Button--default a"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action [actionType = "link"] show active class 2`] = `
<button
  className="cxd-Button cxd-Button--default a is-active"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 1`] = `
<a
  className="a"
  onClick={[Function]}
>
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 2`] = `
<a
  className="a is-active"
  onClick={[Function]}
>
  <span>
    233
  </span>
</a>
`;

exports[`Renderers:Action MenuItem changes class when actived & disabled 3`] = `
<a
  className="a is-active"
  disabled={true}
  onClick={[Function]}
>
  <span>
    233
  </span>
</a>
`;

exports[`Renderers:Action MenuItem display icon 1`] = `
<a
  className="a"
  onClick={[Function]}
>
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action MenuItem display icon 2`] = `
<a
  className="a"
  onClick={[Function]}
>
  <i
    className="cxd-Button-icon fa fa-cloud"
  />
  <span>
    123
  </span>
</a>
`;

exports[`Renderers:Action custom activeClass 1`] = `
<button
  className="cxd-Button cxd-Button--default a"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action custom activeClass 2`] = `
<button
  className="cxd-Button cxd-Button--default a custom-active"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action download shortcut 1`] = `
<button
  className="cxd-Button cxd-Button--default"
  onClick={[Function]}
  type="button"
>
  <span>
    123
  </span>
</button>
`;

exports[`Renderers:Action tooltip 1`] = `
<div>
  <div
    class="cxd-Page"
  >
    <div
      class="cxd-PullRefresh"
    >
      <div
        class="cxd-PullRefresh-wrap"
        style="transform: translate3d(0, 0px, 0);"
      >
        <div
          class="cxd-PullRefresh-header"
        >
          
        </div>
        <div
          class="cxd-Page-content"
        >
          <div
            class="cxd-Page-main"
          >
            <div
              class="cxd-Page-body"
            >
              <button
                class="cxd-Button cxd-Button--default"
                style="position: relative;"
                type="button"
              >
                <span>
                  top
                </span>
                <div
                  class="resize-sensor"
                  style="position: absolute; left: 0px; top: 0px; right: 0px; bottom: 0px; overflow: scroll; z-index: -1; visibility: hidden;"
                >
                  
  
                  <div
                    class="resize-sensor-expand"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0px; top: 0px; width: 10px; height: 10px;"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-shrink"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;"
                  >
                    
    
                    <div
                      style="position: absolute; left: 0; top: 0; width: 200%; height: 200%"
                    />
                    
  
                  </div>
                  
  
                  <div
                    class="resize-sensor-appear"
                    style="position: absolute; left: 0; top: 0; right: 0; bottom: 0; overflow: scroll; z-index: -1; visibility: hidden;animation-name: apearSensor; animation-duration: 0.2s;"
                  />
                </div>
              </button>
              <button
                class="cxd-Button cxd-Button--default"
                type="button"
              >
                <span>
                  bottom
                </span>
              </button>
              <button
                class="cxd-Button cxd-Button--default"
                type="button"
              >
                <span>
                  left
                </span>
              </button>
              <button
                class="cxd-Button cxd-Button--default"
                type="button"
              >
                <span>
                  right
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
